force-app/main/default/objects/Event__c/fields/ABA_sign_up__c.field-meta.xml
<CustomField>
    <fullName>ABA_sign_up__c</fullName>
    <label>FE Consult Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Call</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>