force-app/main/default/objects/Event__c/fields/Access_Time__c.field-meta.xml
<CustomField>
    <fullName>Access_Time__c</fullName>
    <label>Access Time*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>