force-app/main/default/objects/Event__c/fields/Account_manager__c.field-meta.xml
<CustomField>
    <fullName>Account_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraising Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>