force-app/main/default/objects/Event__c/fields/Actual_Givergy_Auction_Items_Listed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Givergy_Auction_Items_Listed__c</fullName>
    <label># Givergy Items Listed in CMS - Silent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>