force-app/main/default/objects/Event__c/fields/Actual_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total__c</fullName>
    <formula>Actual_Givergy_Auction_Items_Listed__c + Givergy_Auction_Items_Listed_Live__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total # Givergy Items Listed in CMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>