force-app/main/default/objects/Event__c/fields/AI_Sales_Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>AI_Sales_Commission_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Old Commission Scheme</label>
    <type>Checkbox</type>
</CustomField>