force-app/main/default/objects/Event__c/fields/Amount_paid_paying_client__c.field-meta.xml
<CustomField>
    <fullName>Amount_paid_paying_client__c</fullName>
    <label>Amount marked ‘paid to client’ / ‘paying</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>