force-app/main/default/objects/Event__c/fields/Amount_Pre_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_Pre_Discount__c</fullName>
    <label>Amount - Pre Discount</label>
    <length>18</length>
    <type>Text</type>
</CustomField>