force-app/main/default/objects/Event__c/fields/Amount_unpaid__c.field-meta.xml
<CustomField>
    <fullName>Amount_unpaid__c</fullName>
    <label>Amount unpaid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>