force-app/main/default/objects/Event__c/fields/Annual_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Annual_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Subscription</label>
    <type>Checkbox</type>
</CustomField>