force-app/main/default/objects/Event__c/fields/Auction_Close_Custom_Notification__c.field-meta.xml
<CustomField>
    <fullName>Auction_Close_Custom_Notification__c</fullName>
    <label>Auction Close Custom Notification*</label>
    <type>TextArea</type>
</CustomField>