force-app/main/default/objects/Event__c/fields/Auction_Item_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Auction_Item_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auction Item Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Auction_Item_Coordinator</relationshipName>
    <type>Lookup</type>
</CustomField>