force-app/main/default/objects/Event__c/fields/Auction_item_notes__c.field-meta.xml
<CustomField>
    <fullName>Auction_item_notes__c</fullName>
    <label>Auction item notes - For brief docs</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>