force-app/main/default/objects/Event__c/fields/Auction_items__c.field-meta.xml
<CustomField>
    <fullName>Auction_items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Givergy Items feature selected in CMS</description>
    <inlineHelpText>Givergy Items feature selected in CMS</inlineHelpText>
    <label>Givergy Items Feature</label>
    <type>Checkbox</type>
</CustomField>