force-app/main/default/objects/Event__c/fields/Auction_Items_Present__c.field-meta.xml
<CustomField>
    <fullName>Auction_Items_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Silent auction feature selected in CMS</description>
    <inlineHelpText>Silent auction feature selected in CMS</inlineHelpText>
    <label>Silent Auction Feature</label>
    <type>Checkbox</type>
</CustomField>