force-app/main/default/objects/Event__c/fields/Auction_payment_fee__c.field-meta.xml
<CustomField>
    <fullName>Auction_payment_fee__c</fullName>
    <description>Auction item payment fee only</description>
    <inlineHelpText>Auction item payment fee only</inlineHelpText>
    <label>Auction Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>