force-app/main/default/objects/Event__c/fields/Auction_payment_fee_recovered__c.field-meta.xml
<CustomField>
    <fullName>Auction_payment_fee_recovered__c</fullName>
    <description>Auction payment fee recovered (Auction payment fee only)</description>
    <inlineHelpText>Auction payment fee recovered (Auction payment fee only)</inlineHelpText>
    <label>Auction Fees Recovered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>