force-app/main/default/objects/Event__c/fields/AV__c.field-meta.xml
<CustomField>
    <fullName>AV__c</fullName>
    <label>AV Contact*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>