force-app/main/default/objects/Event__c/fields/AV_Cost__c.field-meta.xml
<CustomField>
    <fullName>AV_Cost__c</fullName>
    <label>LP - AV Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>