force-app/main/default/objects/Event__c/fields/AV_notes__c.field-meta.xml
<CustomField>
    <fullName>AV_notes__c</fullName>
    <label>OWR AV notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>