force-app/main/default/objects/Event__c/fields/AV_service__c.field-meta.xml
<CustomField>
    <fullName>AV_service__c</fullName>
    <label>OWR AV Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OWR_AV_Service</valueSetName>
    </valueSet>
</CustomField>