force-app/main/default/objects/Event__c/fields/AV_team_contacted__c.field-meta.xml
<CustomField>
    <fullName>AV_team_contacted__c</fullName>
    <label>AV team contacted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AV contacted</fullName>
            </value>
            <value>
                <fullName>AV confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>