force-app/main/default/objects/Event__c/fields/Bidding_station_location__c.field-meta.xml
<CustomField>
    <fullName>Bidding_station_location__c</fullName>
    <label>Bidding station location*</label>
    <type>TextArea</type>
</CustomField>