force-app/main/default/objects/Event__c/fields/Buy_Now_collected_by_Givergy__c.field-meta.xml
<CustomField>
    <fullName>Buy_Now_collected_by_Givergy__c</fullName>
    <label>Buy Now - Collected by Givergy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>