force-app/main/default/objects/Event__c/fields/Buy_now_payment_fee__c.field-meta.xml
<CustomField>
    <fullName>Buy_now_payment_fee__c</fullName>
    <label>Buy Now Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>