force-app/main/default/objects/Event__c/fields/Buy_now_present__c.field-meta.xml
<CustomField>
    <fullName>Buy_now_present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy now present</label>
    <type>Checkbox</type>
</CustomField>