force-app/main/default/objects/Event__c/fields/Buy_now_target__c.field-meta.xml
<CustomField>
    <fullName>Buy_now_target__c</fullName>
    <label>Buy now target*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>