force-app/main/default/objects/Event__c/fields/Campaign_End_Date_GMT__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date_GMT__c</fullName>
    <label>Campaign End Date(GMT)</label>
    <type>DateTime</type>
</CustomField>