force-app/main/default/objects/Event__c/fields/Campaign_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Feedback__c</fullName>
    <label>Campaign / Event Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>