force-app/main/default/objects/Event__c/fields/Campaign_number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_number__c</fullName>
    <label>Campaign Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>