force-app/main/default/objects/Event__c/fields/Charity_in_Aid_of__c.field-meta.xml
<CustomField>
    <fullName>Charity_in_Aid_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charity in Aid of</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>