force-app/main/default/objects/Event__c/fields/Checkin__c.field-meta.xml
<CustomField>
    <fullName>Checkin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check-in*</label>
    <type>Checkbox</type>
</CustomField>