force-app/main/default/objects/Event__c/fields/Checkin_location__c.field-meta.xml
<CustomField>
    <fullName>Checkin_location__c</fullName>
    <label>Check-in location*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>