force-app/main/default/objects/Event__c/fields/Checkin_notes__c.field-meta.xml
<CustomField>
    <fullName>Checkin_notes__c</fullName>
    <label>Check-in notes*</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>