force-app/main/default/objects/Event__c/fields/click_field__c.field-meta.xml
<CustomField>
    <fullName>click_field__c</fullName>
    <formula>IF(OR(ISBLANK(CMS_ID__c),CMS_ID__c==&apos;&apos;),&quot;Event Creating (Refresh)&quot;,  &quot;Click Here&quot;)</formula>
    <label>click field</label>
    <type>Text</type>
</CustomField>