force-app/main/default/objects/Event__c/fields/Client_Accepted_Underbidding_del__c.field-meta.xml
<CustomField>
    <fullName>Client_Accepted_Underbidding_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Accepted Underbidding</label>
    <type>Checkbox</type>
</CustomField>