force-app/main/default/objects/Event__c/fields/Client_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Email__c</fullName>
    <formula>Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Contact Email</label>
    <type>Text</type>
</CustomField>