force-app/main/default/objects/Event__c/fields/Close_date_and_time__c.field-meta.xml
<CustomField>
    <fullName>Close_date_and_time__c</fullName>
    <label>Close date and time</label>
    <type>DateTime</type>
</CustomField>