force-app/main/default/objects/Event__c/fields/Close_Date_Only_System__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Only_System__c</fullName>
    <formula>DATEVALUE(Close_date_and_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Only (System)</label>
    <type>Date</type>
</CustomField>