force-app/main/default/objects/Event__c/fields/CMS_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>CMS_Agent_ID__c</fullName>
    <description>US-TO</description>
    <externalId>true</externalId>
    <label>CMS Agent ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>