force-app/main/default/objects/Event__c/fields/CMS_Event__c.field-meta.xml
<CustomField>
    <fullName>CMS_Event__c</fullName>
    <defaultValue>true</defaultValue>
    <description>US-TO: If Event eligible for CMS Integration.</description>
    <label>CMS Event</label>
    <type>Checkbox</type>
</CustomField>