force-app/main/default/objects/Event__c/fields/CMS_ID__c.field-meta.xml
<CustomField>
    <fullName>CMS_ID__c</fullName>
    <description>US-TO: UUID received from Integration.</description>
    <externalId>true</externalId>
    <label>CMS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>