force-app/main/default/objects/Event__c/fields/CMS_Retrigger__c.field-meta.xml
<CustomField>
    <fullName>CMS_Retrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-TO: Retrigger CMS Create Event callout.</description>
    <label>CMS Retrigger</label>
    <type>Checkbox</type>
</CustomField>