force-app/main/default/objects/Event__c/fields/Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Collection_Method__c</fullName>
    <label>Collection method*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collect from Venue</fullName>
            </value>
            <value>
                <fullName>Collect from Client</fullName>
            </value>
            <value>
                <fullName>Collect from MEM</fullName>
            </value>
            <value>
                <fullName>Collected by Driver</fullName>
            </value>
            <value>
                <fullName>Collected by TM</fullName>
            </value>
            <value>
                <fullName>Collected by MEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>