force-app/main/default/objects/Event__c/fields/Collection_notes__c.field-meta.xml
<CustomField>
    <fullName>Collection_notes__c</fullName>
    <label>Collection notes*</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>