force-app/main/default/objects/Event__c/fields/Collection_tracking__c.field-meta.xml
<CustomField>
    <fullName>Collection_tracking__c</fullName>
    <label>Collection tracking #*</label>
    <type>TextArea</type>
</CustomField>