force-app/main/default/objects/Event__c/fields/commission_agreed__c.field-meta.xml
<CustomField>
    <fullName>commission_agreed__c</fullName>
    <label>Commission Rate (inc pay fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>