force-app/main/default/objects/Event__c/fields/Commission_Cap_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Commission_Cap_Agreed__c</fullName>
    <label>Cap agreed (max revenue to Givergy)</label>
    <type>TextArea</type>
</CustomField>