force-app/main/default/objects/Event__c/fields/Commission_notes__c.field-meta.xml
<CustomField>
    <fullName>Commission_notes__c</fullName>
    <label>Commission notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>