force-app/main/default/objects/Event__c/fields/Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid__c</fullName>
    <label>Commission paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>