force-app/main/default/objects/Event__c/fields/Commission_Rate_After_Cap__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate_After_Cap__c</fullName>
    <label>Commission rate after cap (inc pay fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>