force-app/main/default/objects/Event__c/fields/Community_Created_Event_del__c.field-meta.xml
<CustomField>
    <fullName>Community_Created_Event_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Created Event</label>
    <type>Checkbox</type>
</CustomField>