force-app/main/default/objects/Event__c/fields/Conga_Template_Chooser__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Chooser__c</fullName>
    <formula>IF( TEXT( Account_manager__r.Country__c ) = &apos;US&apos;,&apos;a0G0O000018nUdK&apos;,
IF( TEXT( Account_manager__r.Country__c ) = &apos;AU&apos;,&apos;a0G0O000018nUdP&apos;,
IF( TEXT( Account_manager__r.Country__c ) = &apos;HK&apos;,&apos;a0G0O000018nUdU&apos;,
IF( TEXT( Account_manager__r.Country__c ) = &apos;CA&apos;,&apos;a0G0O000018nUdQ&apos;,
IF( TEXT( Account_manager__r.Country__c ) = &apos;UK&apos;,&apos;a0G0O000017hfYN&apos;,&apos;a0G0O000017hfYN&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Template Chooser</label>
    <type>Text</type>
</CustomField>