force-app/main/default/objects/Event__c/fields/Consultation_Required__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Required__c</fullName>
    <label>Consultation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4-Hour Consultation</fullName>
            </value>
            <value>
                <fullName>1-Hour Consultation</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>