force-app/main/default/objects/Event__c/fields/Content_on_screen_UK_only__c.field-meta.xml
<CustomField>
    <fullName>Content_on_screen_UK_only__c</fullName>
    <label>Content on screen - UK ONLY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Givergy LB only</fullName>
            </value>
            <value>
                <fullName>Givergy LB &amp; Content - no sound</fullName>
            </value>
            <value>
                <fullName>Givergy LB &amp; Content – sound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>