force-app/main/default/objects/Event__c/fields/Contract_Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Subscription_End_Date__c</fullName>
    <formula>Contract__r.Subscription_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Subscription End Date</label>
    <type>Date</type>
</CustomField>