force-app/main/default/objects/Event__c/fields/Cost_notes__c.field-meta.xml
<CustomField>
    <fullName>Cost_notes__c</fullName>
    <label>Cost notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>