force-app/main/default/objects/Event__c/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <formula>TEXT(Country__c)&amp;&quot;-&quot;&amp;TEXT(Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country-Region</label>
    <type>Text</type>
</CustomField>