force-app/main/default/objects/Event__c/fields/Credit_Controller__c.field-meta.xml
<CustomField>
    <fullName>Credit_Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Controller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Credit_Controller</relationshipName>
    <type>Lookup</type>
</CustomField>