force-app/main/default/objects/Event__c/fields/Custom_messages_to_be_sent_free_text_to__c.field-meta.xml
<CustomField>
    <fullName>Custom_messages_to_be_sent_free_text_to__c</fullName>
    <description>Free text field to enter details for any messages to be sent by event staff</description>
    <inlineHelpText>Free text field to enter details for any messages to be sent by event staff</inlineHelpText>
    <label>Additional custom messages to be sent*</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>