force-app/main/default/objects/Event__c/fields/Custom_URL__c.field-meta.xml
<CustomField>
    <fullName>Custom_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped from Opportunity.custom_URL__c which is updated when custom url product is added to opportunity</description>
    <label>Custom URL</label>
    <type>Checkbox</type>
</CustomField>