force-app/main/default/objects/Event__c/fields/Data_deletion_notes__c.field-meta.xml
<CustomField>
    <fullName>Data_deletion_notes__c</fullName>
    <label>Data deletion notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>