force-app/main/default/objects/Event__c/fields/Date_of_last_draw__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_draw__c</fullName>
    <description>Date the last GLI raffle, GLI jackpot raffle, prize draw takes place - syncs with CMS</description>
    <inlineHelpText>Date the GLI raffle, GLI jackpot raffle, prize draw takes place</inlineHelpText>
    <label>Date of last draw</label>
    <type>Date</type>
</CustomField>