force-app/main/default/objects/Event__c/fields/Date_to_delete__c.field-meta.xml
<CustomField>
    <fullName>Date_to_delete__c</fullName>
    <label>Date to delete</label>
    <type>Date</type>
</CustomField>