force-app/main/default/objects/Event__c/fields/Delete_data_post_event__c.field-meta.xml
<CustomField>
    <fullName>Delete_data_post_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete data post event</label>
    <type>Checkbox</type>
</CustomField>