force-app/main/default/objects/Event__c/fields/Delivery_method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_method__c</fullName>
    <label>Delivery method*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send to Venue</fullName>
            </value>
            <value>
                <fullName>Send to Client</fullName>
            </value>
            <value>
                <fullName>Send to MEM</fullName>
            </value>
            <value>
                <fullName>Delivered by Driver</fullName>
            </value>
            <value>
                <fullName>Delivered by TM</fullName>
            </value>
            <value>
                <fullName>Delivered by MEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>