force-app/main/default/objects/Event__c/fields/Delivery_notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_notes__c</fullName>
    <label>Delivery notes*</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>