force-app/main/default/objects/Event__c/fields/Delivery_tracking__c.field-meta.xml
<CustomField>
    <fullName>Delivery_tracking__c</fullName>
    <label>Delivery tracking #*</label>
    <type>TextArea</type>
</CustomField>