force-app/main/default/objects/Event__c/fields/Desired_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Desired_delivery_date__c</fullName>
    <label>Desired delivery date*</label>
    <type>Date</type>
</CustomField>