force-app/main/default/objects/Event__c/fields/Do_not_send_auto_emails__c.field-meta.xml
<CustomField>
    <fullName>Do_not_send_auto_emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, the user (Primary CMS contact) will not receive auto emails related to this campaign/event.</description>
    <inlineHelpText>If ticked, the user (Primary CMS contact) will not receive auto emails related to this campaign/event.</inlineHelpText>
    <label>Do not send auto emails</label>
    <type>Checkbox</type>
</CustomField>