force-app/main/default/objects/Event__c/fields/Donated_Item_Added_to_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Donated_Item_Added_to_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this once the donated item has been added to the campaign</description>
    <label>Donated Item Added to Campaign</label>
    <type>Checkbox</type>
</CustomField>