force-app/main/default/objects/Event__c/fields/Donated_Item_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Donated_Item_Cost_Price__c</fullName>
    <label>Donated Item Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>