force-app/main/default/objects/Event__c/fields/Donation_moment_notes__c.field-meta.xml
<CustomField>
    <fullName>Donation_moment_notes__c</fullName>
    <label>Donation moment notes*</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>