force-app/main/default/objects/Event__c/fields/EM_ES_Expenses_EX_TAXI__c.field-meta.xml
<CustomField>
    <fullName>EM_ES_Expenses_EX_TAXI__c</fullName>
    <label>SA - EM &amp; ES Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>