force-app/main/default/objects/Event__c/fields/EM_ES_Taxi__c.field-meta.xml
<CustomField>
    <fullName>EM_ES_Taxi__c</fullName>
    <label>SA - EM &amp; ES Taxi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>