force-app/main/default/objects/Event__c/fields/EM_ES_Wage__c.field-meta.xml
<CustomField>
    <fullName>EM_ES_Wage__c</fullName>
    <label>SA - EM &amp; ES Wage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>