force-app/main/default/objects/Event__c/fields/EMS_event_link__c.field-meta.xml
<CustomField>
    <fullName>EMS_event_link__c</fullName>
    <label>CMS Link*</label>
    <type>Url</type>
</CustomField>