force-app/main/default/objects/Event__c/fields/EMS_Password__c.field-meta.xml
<CustomField>
    <fullName>EMS_Password__c</fullName>
    <label>Givergy Password</label>
    <type>TextArea</type>
</CustomField>