force-app/main/default/objects/Event__c/fields/EMS_Username__c.field-meta.xml
<CustomField>
    <fullName>EMS_Username__c</fullName>
    <label>Givergy Username</label>
    <type>TextArea</type>
</CustomField>