force-app/main/default/objects/Event__c/fields/Equipment_notes__c.field-meta.xml
<CustomField>
    <fullName>Equipment_notes__c</fullName>
    <label>Equipment notes - For brief docs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>