force-app/main/default/objects/Event__c/fields/Estimated_Event_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Event_Cost__c</fullName>
    <label>Estimated event costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>