force-app/main/default/objects/Event__c/fields/EVCN__c.field-meta.xml
<CustomField>
    <fullName>EVCN__c</fullName>
    <formula>IF(NOT(ISBLANK(Venue_Contact__r.MobilePhone)), 
Venue_Contact__r.MobilePhone, 
Venue_Contact__r.Phone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Venue Contact Number</label>
    <type>Text</type>
</CustomField>