force-app/main/default/objects/Event__c/fields/Event_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Event_Auto_Number__c</fullName>
    <label>Event Auto Number</label>
    <type>AutoNumber</type>
</CustomField>