force-app/main/default/objects/Event__c/fields/Event_Brief__c.field-meta.xml
<CustomField>
    <fullName>Event_Brief__c</fullName>
    <label>Event Brief*</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>