force-app/main/default/objects/Event__c/fields/Event_Converted__c.field-meta.xml
<CustomField>
    <fullName>Event_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Converted</label>
    <type>Checkbox</type>
</CustomField>