force-app/main/default/objects/Event__c/fields/Event_Costs_Ex_donated__c.field-meta.xml
<CustomField>
    <fullName>Event_Costs_Ex_donated__c</fullName>
    <formula>INT_Payment_Costs_Imported__c + LP_Total_Costs__c + SA_Total_Costs__c + iSi_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Costs (Ex donated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>