force-app/main/default/objects/Event__c/fields/Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Event_Count__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Event Count</label>
    <type>Checkbox</type>
</CustomField>