force-app/main/default/objects/Event__c/fields/Event_Date_DateValue__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_DateValue__c</fullName>
    <formula>DATEVALUE(Event_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date DO NOT USE</label>
    <type>Date</type>
</CustomField>