force-app/main/default/objects/Event__c/fields/Event_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_New__c</fullName>
    <label>Event Date*</label>
    <type>Date</type>
</CustomField>