force-app/main/default/objects/Event__c/fields/Event_Date_vs_Web_Close__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_vs_Web_Close__c</fullName>
    <formula>IF(
  ISBLANK(Close_date_and_time__c),
  Event_Date__c,
  IF(
    Event_Date__c&gt;Close_date_and_time__c,
    Event_Date__c,
    Close_date_and_time__c
    )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date vs Web Close</label>
    <type>Date</type>
</CustomField>