force-app/main/default/objects/Event__c/fields/Event_Date_vs_Web_Launch__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_vs_Web_Launch__c</fullName>
    <formula>IF(
  ISBLANK(Launch_date_and_time__c),
  Event_Date__c,
  IF(
    Event_Date__c&lt;Launch_date_and_time__c,
    Event_Date__c,
    Launch_date_and_time__c
    )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date vs Web Launch</label>
    <type>Date</type>
</CustomField>