force-app/main/default/objects/Event__c/fields/Event_Ding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Event_Ding_Notes__c</fullName>
    <label>Event Ding Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>